# IsosurfaceCpp

./: .gitignore  CMakeLists.txt  IsosurfaceCppConfig.cmake.in  LICENSE  README.md  setup.py  vcpkg.json
.github/workflows/: build-brew.yml  build-msys2.yml  build-pip.yml  build-ubuntu.yml  build-vcpkg.yml
isosurfacecpp/: Module.cpp  example.py
isosurfacecpp/sgl/Math/Geometry/: AABB3.hpp
isosurfacecpp/sgl/Utils/Mesh/: IndexMesh.cpp
isosurfacecpp/sgl/Utils/Parallel/: Reduction.cpp  Reduction.hpp
pymodule/: Module.cpp  example.py  isosurfacecpp.pyi
pymodule/sgl/Math/Geometry/: AABB3.cpp
pymodule/sgl/Utils/SearchStructures/: SearchStructure.hpp
pymodule/sgl/glm/: glm.hpp  info.txt
src/: Defines.hpp  MarchingCubes.cpp  MarchingCubes.hpp  SnapMC.cpp  SnapMC.hpp  SnapMCTable.hpp  Util.cpp  Util.hpp
